Fixed bug where if you required a durable cache it wasn't displaying the correct text; fixed display glitch for directory field on Safari; fixed display glitch for Save button on IE
git-svn-id: http://svn.dojotoolkit.org/src@7126 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/dot/ui-template/widget.css
+++ b/trunk/src/dot/ui-template/widget.css
@@ -112,6 +112,13 @@ a.dot-disabled{
 	cursor: text;
 }
 
+.dot-needs-durable-cache{
+	padding-top: 1.5em;
+	font-size: 16pt !important;
+	text-align: center;
+	line-height: 1.2;
+}
+
 /** Learn How Page Styles */
 #dot-learn-how-body{
 	padding: 3em;
